<resources>
    <string name="app_name">edTechSpark</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Saksham Chauhan</string>
    <string name="nav_header_subtitle">saksham226@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Courses</string>
    <string name="menu_gallery">Dashboard</string>
    <string name="menu_slideshow">My Orders</string>
    <string name="Id">Id</string>
    <string name="Payment"><b>Payment Id</b></string>
    <string name="Created"><b>Created Date</b></string>
    <string name="Detail"><b>Detail</b></string>
    <string name="Action"><b>Action</b></string>
</resources>