<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.manijee.edtechspark.views.activities.ui.My_Courses.CourseFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mycourses" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.manijee.edtechspark.views.activities.ui.Dashboard.DashboardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.manijee.edtechspark.views.activities.ui.My_Orders.My_Orders_Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_My_Orders" />
</navigation>