<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="201dp"
        android:layout_height="85dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/PaymentId"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:text="@string/Payment"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Payment"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text=""
           />


    </LinearLayout>

    <LinearLayout
        android:layout_width="212dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/Created"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="d"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="133dp"
        android:layout_height="102dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">

        <TextView
            android:id="@+id/Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Action"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:backgroundTint="#28a745"
            android:text="@string/Detail" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Id"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orderId"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="1234567891234" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>